# receipt-tracker

./: CLAUDE.md  Cargo.toml  Trunk.toml  index.html
.github/workflows/: deploy.yml
public/: 404.html  manifest.json  sw.js
src/: app.rs  error.rs  lib.rs
src/components/: app_bar.rs  category_selector.rs  currency_selector.rs  error_display.rs  fab.rs  mod.rs  photo_capture.rs  photo_editor.rs  photo_viewer.rs  receipt_card.rs  receipt_form.rs  trip_card.rs  trip_form.rs
src/export/: csv.rs  pdf.rs
src/models/: category.rs  mod.rs  receipt.rs  trip.rs
src/pages/: add_receipt.rs  add_trip.rs  edit_receipt.rs  mod.rs  receipt_detail.rs  settings.rs  trip_detail.rs  trip_list.rs
src/state/: mod.rs  store.rs
src/storage/: categories.rs  db.rs  mod.rs  photos.rs  receipts.rs  trips.rs
