[package]
name = "receipt_tracker"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = { version = "0.22", features = ["csr"] }
yew-router = "0.19"
yewdux = "0.12"
rexie = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
chrono = { version = "0.4", features = ["wasmbind", "serde"] }
uuid = { version = "1", features = ["v4", "js"] }
log = "0.4"
console_log = { version = "1", features = ["color"] }
gloo-file = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }
gloo-utils = "0.2"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }

[dependencies.web-sys]
version = "0.3"
features = [
  "Window", "Document", "Element", "HtmlElement",
  "HtmlInputElement", "HtmlSelectElement", "HtmlTextAreaElement",
  "HtmlImageElement",
  "MediaDevices", "MediaStream", "MediaStreamConstraints",
  "MediaStreamTrack", "MediaTrackConstraints",
  "HtmlVideoElement", "HtmlCanvasElement", "CanvasRenderingContext2d",
  "File", "FileList", "FileReader",
  "Blob", "BlobPropertyBag", "Url",
  "Navigator",
  "Event", "MouseEvent", "InputEvent", "PointerEvent",
  "TouchEvent", "Touch", "TouchList",
  "DomRect",
  "ServiceWorkerContainer", "ServiceWorkerRegistration",
  "CssStyleDeclaration",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
